# zipnn_phi3

./: README.md  pyproject.toml
