[project]
name = "zipnn-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "huggingface>=0.0.1",
    "numpy>=1.26.4",
    "torch>=2.5.1",
    "transformers==4.42.0",
    "zipnn>=0.5.0",
    "zstandard>=0.23.0",
]
